--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             for (let i = 1; i <= max; i++) {
                 const key = `${mode}${i}`;
                 const data = JSON.parse(localStorage.getItem(key));
-                if (!data || Object.keys(data).length === 0 || (!data.isRunning && !data.elapsedTime)) {
+                if (!data || (!data.isRunning && !(data.elapsedTime > 0))) {
                     startTimer(i);
                 } else if (data && !data.isRunning) {
                     resumeTimer(i);
